# inscricao_mostrapedagogica

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
modules/: gide.py
